[project]
name = "hafdh-nadhar"
version = "0.1.0"
description = "Remove women body from a picture"
authors = [
    {name = "karim-bouchez", email = "bouchez.karim@gmail.com"},
]
dependencies = [
    "opencv-python>=4.8.0.76",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
