[project]
name = "hafdh-nadhar"
version = "0.1.3"
repository = "https://github.com/itkho/hafdh-nadhar"
description = "Blur humans from a picture"
authors = [
    {name = "karim-bouchez", email = "bouchez.karim@gmail.com"},
]
dependencies = [
    "opencv-python>=4.8.0.76",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["**/*.cfg", "**/*.weights"]

[tool.pdm.dev-dependencies]
dev = []
