[project]
name = "hafdh-nadhar"
version = "0.1.21"
repository = "https://github.com/itkho/hafdh-nadhar"
description = "Blur humans from a picture"
authors = [
    {name = "karim-bouchez", email = "bouchez.karim@gmail.com"},
]
dependencies = [
    "opencv-python>=4.8.0.76",
    "typer[all]>=0.9.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
# Allow to run the app with the CLI `hafdh`
hafdh = "hafdh_nadhar.cli:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = []
